# Python_toolbox

./: .gitignore  LICENSE  README.md  ajustes.py  animaciones.py  estadistica.py  graficos.py  incertidumbres.py  latex_tools.py  manual_estadistica.tex  montecarlo.py  numericos.py  pyproject.toml  test_normalized_display.py  test_weighted_comprehensive.py  test_weighted_mean.py  tutorial_modulo.ipynb
docs/: README_ajustes.md  README_animaciones.md  README_animations.md  README_estadistica.md  README_fft_tools.md  README_fitting.md  README_functions.md  README_graficos.md  README_graphics.md  README_incertidumbres.md  README_latex_tools.md  README_monte_carlo.md  README_montecarlo.md  README_numericos.md  README_statistics.md  README_uncertainties.md  UNIT_CONVERSION_IMPLEMENTATION.md
marhare/: __init__.py  ajustes.py  animations.py  estadistica.py  fft_tools.py  fitting.py  functions.py  graficos.py  graphics.py  incertidumbres.py  latex_tools.py  numerics.py  statistics.py  tutorial_modulo.ipynb  uncertainties.py  unit_converter.py
module/: __init__.py  fft_tools.py  numericos.py
