[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_toolbox"
version = "1.0.0"
description = "A collection of utilities and tools for Python, designed to simplify common tasks in scientific computing, data analysis, and laboratory work."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Martín", email = "your.email@example.com"}
]
keywords = ["scientific computing", "data analysis", "utilities", "tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "sympy>=1.9.0",
    "cycler>=0.10.0",
    "uncertainties>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/python_toolbox"
Repository = "https://github.com/yourusername/python_toolbox.git"
